# photo-utils

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  utils.py
.github/workflows/: test.yaml
lib/: isobmff.py  jpg.py  lib.py  logger.py  main.py  mov.py  mp4.py  tiff.py
photo_utils/: cli.py  lib.py  logger.py
photo_utils/test/: test_lib.py
test/: test_lib.py  test_main.py
test/files/: heic_with_exif.heic
utils/: cli.py  utils.py
utils/test/: test_utils.py
