[tool.poetry]
name = "photo-utils"
version = "0.0.1"
description = "A collection of Python utilities to organize photos and other media"
authors = ["Duncan Grubbs <duncan.grubbs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
exif = "^1.6.0"
tqdm = "^4.66.5"
typer = "^0.12.5"
structlog = "^24.4.0"
filetype = "^1.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
mypy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
