[project]
name = "photo-utils"
version = "0.0.1"
description = "A collection of Python utilities to organize photos and other media"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "exif>=1.6.1",
    "filetype>=1.2.0",
    "pillow>=11.2.1",
    "pillow-heif>=0.22.0",
    "structlog>=25.3.0",
    "tdqm>=0.0.1",
    "typer>=0.15.3",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
    "ty>=0.0.0a8",
]
